--- a/mbxmlutils/mbxmlutilshelper/CMakeLists.txt
+++ b/mbxmlutils/mbxmlutilshelper/CMakeLists.txt
@@ -2,11 +2,11 @@
 ### Include the subdirectories
 #############################################
 # add the project library with the sources
-add_library(mbxmluitlsbase SHARED
+add_library(mbxmlutilsbase SHARED
 last_write_time.cc
 shared_library.cc
 )
-target_link_libraries(mbxmluitlsbase)
+target_link_libraries(mbxmlutilsbase)
 
 add_library(mbxmlutilshelper SHARED 
 dom.cc 
@@ -14,11 +14,11 @@ getinstallpath.cc
 utils.cc
 )
     
-target_link_libraries(mbxmlutilshelper mbxmluitlsbase)
+target_link_libraries(mbxmlutilshelper mbxmlutilsbase)
 
 # Create a config.h due to the checks made before
-#configure_file ("${PROJECT_SOURCE_DIR}/fmatvec/config.h.in"
-#                "${PROJECT_BINARY_DIR}/config.h" )
+configure_file ("${PROJECT_SOURCE_DIR}/mbxmlutilshelper/config.h.in"
+                "${PROJECT_BINARY_DIR}/config.h" )
 # Include the path when compiling
 include_directories(${PROJECT_BINARY_DIR})
 
@@ -27,7 +27,7 @@ include_directories(${PROJECT_BINARY_DIR})
 #############################################
 
 # Install the library fmatvec
-install(TARGETS mbxmluitlsbase mbxmlutilshelper 
+install(TARGETS mbxmlutilsbase mbxmlutilshelper 
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib)
 
