--- a/mbxmlutils/mbxmlutilshelper.pc.in
+++ b/mbxmlutils/mbxmlutilshelper.pc.in
@@ -1,11 +1,11 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
+prefix=@CMAKE_INSTALL_PREFIX@
+exec_prefix=${prefix}
+libdir=${exec_prefix}/lib
+includedir=${prefix}/include
 
 Name: MBXMLUtilsHelper
 Description: MBXMLUtils Helper Utilities
-Requires: xerces-c fmatvec
-Version: @VERSION@
+Requires: xerces-c fmatvec mbxmlutilsbase casadi
+Version: @mbxmlutils_VERSION@
 Libs: -L${libdir} -lmbxmlutilshelper
 Cflags: -I${includedir}
